// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Select with grouped options 1`] = `
.c3 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter",sans-serif;
  color: rgba(0,0,0,0.8);
  font-weight: 400;
  font-size: 11px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  line-height: 16px;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter",sans-serif;
  color: #ffffff;
  font-weight: 400;
  font-size: 12px;
  -webkit-letter-spacing: .005em;
  -moz-letter-spacing: .005em;
  -ms-letter-spacing: .005em;
  letter-spacing: .005em;
  line-height: 16px;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 24px;
  padding: 0 16px 0 32px;
  margin: 0;
  list-style-type: none;
  text-align: left;
  cursor: pointer;
  position: relative;
}

.c9 svg {
  position: absolute;
  left: 6px;
  top: 4px;
  pointer-events: none;
}

.c9:hover {
  background-color: #18a0fb;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 30px;
  margin: 1px 0 1px 0 !important;
  padding: 0 8px 0 8px;
  text-align: left;
  cursor: pointer;
  color: rgba(0,0,0,0.8);
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #ffffff;
  font-family: "Inter",sans-serif;
  font-weight: 400;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  position: relative;
}

.c2 .c4 {
  margin-left: 8px;
  color: rgba(0,0,0,0.2);
}

.c2:hover {
  border: 1px solid rgba(0,0,0,0.1);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2:hover .c4 {
  color: rgba(0,0,0,1);
}

.c2:focus {
  padding: 0 7px 0 7px;
  border: 2px solid #18a0fb;
  outline: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2:focus .c4 {
  color: rgba(0,0,0,1);
}

.c6 {
  position: absolute;
  z-index: 2;
  top: 31px;
  right: 0;
  left: 0;
  display: block;
  overflow: auto;
  width: 100%;
  margin: 0;
  padding: 8px 0 8px 0;
  list-style-type: none;
  opacity: 0;
  box-shadow: 0 5px 17px rgba(0,0,0,0.2),0 2px 7px rgba(0,0,0,0.15);
  background-color: #222222;
  display: none;
}

.c6.show-options {
  opacity: 1;
  display: block;
}

.c1 {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(255,255,255,0);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.c0 select {
  display: none;
}

.c0 .c5 {
  margin: 0;
  padding: 8px 0 8px 0;
}

.c0 .c8 {
  margin: 0;
}

.c0 .c7:not(:first-child) {
  padding: 8px 0 0 0;
  margin-top: 8px;
  border-top: solid 1px rgba(255,255,255,0.2);
}

.c0 .c7:last-child {
  padding-bottom: 0;
}

<div
  className="c0"
  options={
    Array [
      Object {
        "group": Array [
          Object {
            "label": "Item 1",
            "value": "1",
          },
          Object {
            "label": "Item 2",
            "value": "2",
          },
        ],
        "label": "Group 1",
      },
      Object {
        "group": Array [
          Object {
            "label": "Item 3",
            "value": "3",
          },
          Object {
            "label": "Item 4",
            "value": "4",
          },
        ],
        "label": "Group 2",
      },
      Object {
        "group": Array [
          Object {
            "label": "Item 5",
            "value": "5",
          },
          Object {
            "label": "Item 6",
            "value": "6",
          },
        ],
        "label": "Group 3",
      },
    ]
  }
>
  <div
    className="c1"
    onClick={[Function]}
  />
  <button
    className="c2"
    onClick={[Function]}
  >
    <span
      className="c3"
    >
      Item 1
    </span>
    <div
      className="c4 "
    >
      <svg
        fill="none"
        height="5"
        viewBox="0 0 8 5"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M3.64645 4.35359L0.646454 1.35359L1.35356 0.646484L4.00001 3.29293L6.64645 0.646484L7.35356 1.35359L4.35356 4.35359L4.00001 4.70714L3.64645 4.35359Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </button>
  <ul
    className="c5 c6"
  >
    <div
      className="c7 "
    >
      <li
        className="c8 c9"
        data-label="Item 1"
        data-value="1"
        id="1"
        onClick={[Function]}
      >
        <span
          className="c10"
          size="medium"
        >
          Item 1
        </span>
      </li>
      <li
        className="c8 c9"
        data-label="Item 2"
        data-value="2"
        id="2"
        onClick={[Function]}
      >
        <span
          className="c10"
          size="medium"
        >
          Item 2
        </span>
      </li>
    </div>
    <div
      className="c7 "
    >
      <li
        className="c8 c9"
        data-label="Item 3"
        data-value="3"
        id="3"
        onClick={[Function]}
      >
        <span
          className="c10"
          size="medium"
        >
          Item 3
        </span>
      </li>
      <li
        className="c8 c9"
        data-label="Item 4"
        data-value="4"
        id="4"
        onClick={[Function]}
      >
        <span
          className="c10"
          size="medium"
        >
          Item 4
        </span>
      </li>
    </div>
    <div
      className="c7 "
    >
      <li
        className="c8 c9"
        data-label="Item 5"
        data-value="5"
        id="5"
        onClick={[Function]}
      >
        <span
          className="c10"
          size="medium"
        >
          Item 5
        </span>
      </li>
      <li
        className="c8 c9"
        data-label="Item 6"
        data-value="6"
        id="6"
        onClick={[Function]}
      >
        <span
          className="c10"
          size="medium"
        >
          Item 6
        </span>
      </li>
    </div>
  </ul>
</div>
`;

exports[`A default Select 1`] = `
.c3 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter",sans-serif;
  color: rgba(0,0,0,0.8);
  font-weight: 400;
  font-size: 11px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  line-height: 16px;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter",sans-serif;
  color: #ffffff;
  font-weight: 400;
  font-size: 12px;
  -webkit-letter-spacing: .005em;
  -moz-letter-spacing: .005em;
  -ms-letter-spacing: .005em;
  letter-spacing: .005em;
  line-height: 16px;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 24px;
  padding: 0 16px 0 32px;
  margin: 0;
  list-style-type: none;
  text-align: left;
  cursor: pointer;
  position: relative;
}

.c8 svg {
  position: absolute;
  left: 6px;
  top: 4px;
  pointer-events: none;
}

.c8:hover {
  background-color: #18a0fb;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 30px;
  margin: 1px 0 1px 0 !important;
  padding: 0 8px 0 8px;
  text-align: left;
  cursor: pointer;
  color: rgba(0,0,0,0.8);
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #ffffff;
  font-family: "Inter",sans-serif;
  font-weight: 400;
  font-size: 11px;
  line-height: 16px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  position: relative;
}

.c2 .c4 {
  margin-left: 8px;
  color: rgba(0,0,0,0.2);
}

.c2:hover {
  border: 1px solid rgba(0,0,0,0.1);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2:hover .c4 {
  color: rgba(0,0,0,1);
}

.c2:focus {
  padding: 0 7px 0 7px;
  border: 2px solid #18a0fb;
  outline: none;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2:focus .c4 {
  color: rgba(0,0,0,1);
}

.c6 {
  position: absolute;
  z-index: 2;
  top: 31px;
  right: 0;
  left: 0;
  display: block;
  overflow: auto;
  width: 100%;
  margin: 0;
  padding: 8px 0 8px 0;
  list-style-type: none;
  opacity: 0;
  box-shadow: 0 5px 17px rgba(0,0,0,0.2),0 2px 7px rgba(0,0,0,0.15);
  background-color: #222222;
  display: none;
}

.c6.show-options {
  opacity: 1;
  display: block;
}

.c1 {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(255,255,255,0);
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.c0 select {
  display: none;
}

.c0 .c5 {
  margin: 0;
  padding: 8px 0 8px 0;
}

.c0 .c7 {
  margin: 0;
}

.c0 .c10:not(:first-child) {
  padding: 8px 0 0 0;
  margin-top: 8px;
  border-top: solid 1px rgba(255,255,255,0.2);
}

.c0 .c10:last-child {
  padding-bottom: 0;
}

<div
  className="c0"
  options={
    Array [
      Object {
        "label": "Option One",
        "value": "one",
      },
      Object {
        "label": "Option Two",
        "value": "two",
      },
      Object {
        "label": "Option Three",
        "value": "three",
      },
    ]
  }
>
  <div
    className="c1"
    onClick={[Function]}
  />
  <button
    className="c2"
    onClick={[Function]}
  >
    <span
      className="c3"
    >
      Option One
    </span>
    <div
      className="c4 "
    >
      <svg
        fill="none"
        height="5"
        viewBox="0 0 8 5"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M3.64645 4.35359L0.646454 1.35359L1.35356 0.646484L4.00001 3.29293L6.64645 0.646484L7.35356 1.35359L4.35356 4.35359L4.00001 4.70714L3.64645 4.35359Z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </button>
  <ul
    className="c5 c6"
  >
    <li
      className="c7 c8"
      data-label="Option One"
      data-value="one"
      id="one"
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M13.2069 5.20724L7.70688 10.7072L6.99977 11.4144L6.29267 10.7072L3.29267 7.70724L4.70688 6.29303L6.99977 8.58592L11.7927 3.79303L13.2069 5.20724Z"
          fill="white"
          fillOpacity="1"
          fillRule="evenodd"
        />
      </svg>
      <span
        className="c9"
        size="medium"
      >
        Option One
      </span>
    </li>
    <li
      className="c7 c8"
      data-label="Option Two"
      data-value="two"
      id="two"
      onClick={[Function]}
    >
      <span
        className="c9"
        size="medium"
      >
        Option Two
      </span>
    </li>
    <li
      className="c7 c8"
      data-label="Option Three"
      data-value="three"
      id="three"
      onClick={[Function]}
    >
      <span
        className="c9"
        size="medium"
      >
        Option Three
      </span>
    </li>
  </ul>
</div>
`;
